Product Development Project Manager at Columbia Care . Project Manager Media Monitoring (w/m/d). Zeta Global Careers - Technical Project Manager. Dynacare Careers - Program Manager - Customer Relations. Santander Consumer USA Careers - Associate Project Manager. Tyro - Payments Project Manager - Fixed Term 12 mos. Ajna Infotech IT Project Manager (eCommerce) | SmartRecruiters. Sr Project Manager / Associate Director - Oncology Adoptive Cell Therapy Team - PPD Careers. Senior Project Manager / Project Manager - Respiratory Vaccines Team (US Homebased) - PPD Careers. Abrigo Careers - Implementation Project Manager. Job Application for Senior Project Manager at Agilisys. Big Health - Program Manager (Software Development). Job Application for Software Project Manager at DRW . Project Manager - Kiln Equipment Supplies - Compass Business Solutions, Inc. - Career Page. The Zebra - Project Manager. The Zebra - Senior Project Manager. Job Application for Project Manager - Clyde & Co - PERM at Dare.     UX Project Manager at Modus . Shift Digital Careers - Digital Program Manager. Shift Digital Careers - Digital Program Manager. Project Manager - Tetra Tech Careers. Senior Program Manager - Tetra Tech Careers. Multiplica - Jobs: Digital Project Manager (WEB) - Apply online. Skyline Construction - Project Manager - Skyline Capital Builders. Carr Workplaces Senior Project Manager, Construction | SmartRecruiters. Santander Consumer USA Careers - Associate Project Manager. Job Application for Strategic Program Manager, NPI - Global Supply Chain at JUUL Labs. Project Manager (Oncology) - Syneos Health Careers. TrussWorks - Delivery Manager (Project Manager). Best Western Hotels & Resorts Associate Program Manager - Sales | SmartRecruiters. Deloitte Assurance - Audit - FIST - Project Manager - Cape Town | SmartRecruiters. Community Healthcare Network Program Manager (LGBTQ Programs) | SmartRecruiters. Project Manager in Virginia Beach, Virginia | Careers at Capstone .... Project M

--- a/project-manager.html
+++ b/project-manager.html
@@ -78,11 +78,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/bankerstoolbox/job/oKQDafw7'>Abrigo Careers - Implementation Project Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/bankerstoolbox/job/oKQDafw7'>Abrigo Careers - Implementation Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/agilisys/jobs/1783339'>Job Application for Senior Project Manager at Agilisys</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/agilisys/jobs/1783339'>Job Application for Senior Project Manager at Agilisys</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -94,7 +94,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='http://compassbusinesssolutionsinc.applytojob.com/apply/0OktdFDzk2/Project-Manager-Kiln-Equipment-Supplies'>Project Manager - Kiln Equipment Supplies - Compass Business Solutions, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://compassbusinesssolutionsinc.applytojob.com/apply/0OktdFDzk2/Project-Manager-Kiln-Equipment-Supplies'>Project Manager - Kiln Equipment Supplies - Compass Business Solutions, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -241,19 +241,19 @@ Media Partners, LLC.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/starry/jobs/4367592002'>Job Application for Technical Project Manager at Starry</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/starry/jobs/4367592002'>Job Application for Technical Project Manager at Starry</a></h5> 
 <p><span class="badge badge-light">Washington, District of Columbia</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/starry/jobs/4371557002'>Job Application for Project Manager of Wireless Products at Starry</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/starry/jobs/4371557002'>Job Application for Project Manager of Wireless Products at Starry</a></h5> 
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/automationanywhere/job/o8CAafwe'>Automation Anywhere Careers - Sr. Program Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/automationanywhere/job/o8CAafwe'>Automation Anywhere Careers - Sr. Program Manager</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/automationanywhere/job/oZBhafwL'>Automation Anywhere Careers - Sr. Technical Program Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/automationanywhere/job/oZBhafwL'>Automation Anywhere Careers - Sr. Technical Program Manager</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -307,7 +307,7 @@ AUS001HI. Solution Platform Engineer. Australia. Core Business Services.</p>
 <p><span class="badge badge-light">Buenos Aires</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/avant/dd856702-45ba-470a-aaf8-9eb6ddf6ba8b'>Avant - Technical Project Manager, Cloud Infrastructure</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/avant/dd856702-45ba-470a-aaf8-9eb6ddf6ba8b'>Avant - Technical Project Manager, Cloud Infrastructure</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -334,7 +334,7 @@ DUAL MASTER (M/F/D) PROJECT MANAGER in Bengaluru (published:?...</p>
 <p><span class="badge badge-light">Los Angeles, CA, USA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://kimmel-associates.breezy.hr/p/3f1d42292511-project-manager'>Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kimmel-associates.breezy.hr/p/3f1d42292511-project-manager'>Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -358,7 +358,7 @@ DUAL MASTER (M/F/D) PROJECT MANAGER in Bengaluru (published:?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://mainebhr.recruiterbox.com/jobs/fk031x4'>
+<h5><a href='http://mainebhr.recruiterbox.com/jobs/fk031x4'>
     Inspection Program Manager - 0748-2 at State of Maine
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -426,7 +426,7 @@ DUAL MASTER (M/F/D) PROJECT MANAGER in Bengaluru (published:?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://ncianato.referrals.selectminds.com/jobs/senior-translation-project-manager-580'>Senior Translation Project Manager - NATO Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ncianato.referrals.selectminds.com/jobs/senior-translation-project-manager-580'>Senior Translation Project Manager - NATO Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -462,7 +462,7 @@ DUAL MASTER (M/F/D) PROJECT MANAGER in Bengaluru (published:?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://profacebook.applytojob.com/apply/Ou3a9lmbjk/Program-Manager-I'>Program Manager I - PRO Unlimited @ Facebook - Career Page</a></h5> 
+<h5><a href='http://profacebook.applytojob.com/apply/Ou3a9lmbjk/Program-Manager-I'>Program Manager I - PRO Unlimited @ Facebook - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
