--- a/product-manager.html
+++ b/product-manager.html
@@ -48,7 +48,7 @@
 <p><span class="badge badge-light">Austin</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/elementai/jobs/1784282'>Job Application for Designer de produit - Assurance | Product Designer - Insurance at Element AI</a></h5> 
+<h5><a href='https://boards.greenhouse.io/elementai/jobs/1784282'>Job Application for Designer de produit - Assurance | Product Designer - Insurance at Element AI</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -80,7 +80,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/gitlab/jobs/4368627002'>Job Application for Senior Product Designer,  Growth at GitLab</a></h5> 
+<h5><a href='https://boards.greenhouse.io/gitlab/jobs/4368627002'>Job Application for Senior Product Designer,  Growth at GitLab</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -90,7 +90,7 @@
 <p><span class="badge badge-light">K?ln, Deutschland</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/avantstay/5309b580-c352-43f5-8e49-98e13d46454a'>AvantStay - Product Manager (Growth)</a></h5> 
+<h5><a href='https://jobs.lever.co/avantstay/5309b580-c352-43f5-8e49-98e13d46454a'>AvantStay - Product Manager (Growth)</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -98,7 +98,7 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/pitchbook/job/oCqEafwA'>PitchBook Data, Inc. Careers - Product Manager, Data</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/pitchbook/job/oCqEafwA'>PitchBook Data, Inc. Careers - Product Manager, Data</a></h5> 
 <p><span class="badge badge-light">Seattle Seattle San Francisco New York London Mumbai</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -201,7 +201,7 @@ in Syracuse, New York. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/automationanywhere/job/oLHBafwX'>Automation Anywhere Careers - Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/automationanywhere/job/oLHBafwX'>Automation Anywhere Careers - Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -220,7 +220,7 @@ support, sales, marketing, and system usage data provided by development?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://digimind.recruiterbox.com/jobs/fk03fte/'>
+<h5><a href='https://digimind.recruiterbox.com/jobs/fk03fte/'>
     Product Owner / AMOA at Digimind
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -236,7 +236,7 @@ support, sales, marketing, and system usage data provided by development?...</p>
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/voltacharging/64ff8ea2-26a5-4905-80ea-f55762b1daf5'>Volta Charging - Technical Product Manager (Software)</a></h5> 
+<h5><a href='https://jobs.lever.co/voltacharging/64ff8ea2-26a5-4905-80ea-f55762b1daf5'>Volta Charging - Technical Product Manager (Software)</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -308,7 +308,7 @@ published: 12.04.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://bossanovarobotics.applytojob.com/apply/NlhiSQgJ4u/Technical-Product-Manager-Robotics'>Technical Product Manager - Robotics - Bossanova Robotics - Career Page</a></h5> 
+<h5><a href='http://bossanovarobotics.applytojob.com/apply/NlhiSQgJ4u/Technical-Product-Manager-Robotics'>Technical Product Manager - Robotics - Bossanova Robotics - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -382,15 +382,15 @@ published: 12.04.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/netflix/9b3e7903-8999-48c3-ade2-d3b70c063441'>Netflix - Product Designer, Interactive Experiences</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/netflix/9b3e7903-8999-48c3-ade2-d3b70c063441'>Netflix - Product Designer, Interactive Experiences</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://akamaijobs.referrals.selectminds.com/jobs/product-manager-11689'>Product Manager - Akamai Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://akamaijobs.referrals.selectminds.com/jobs/product-manager-11689'>Product Manager - Akamai Careers</a></h5> 
 <p><span class="badge badge-light">Cambridge</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://scholastic.referrals.selectminds.com/jobs/crm-lead-salesforce-com-product-owner-5189'>CRM Lead, Salesforce.com Product Owner - Scholastic Inc. Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://scholastic.referrals.selectminds.com/jobs/crm-lead-salesforce-com-product-owner-5189'>CRM Lead, Salesforce.com Product Owner - Scholastic Inc. Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>22 hours ago ... The primary focus of this role is the creation and execution of a strategic CRM 
 roadmap that heavily leverages Salesforce.com, customer data, and integrations
@@ -445,7 +445,7 @@ experience analysis and testing, competitive research and any other relevant?...
 <p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/capeanalytics/02bbff59-2a7c-41cf-84d4-f3c294b820af'>Cape Analytics - Sr. Product Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/capeanalytics/02bbff59-2a7c-41cf-84d4-f3c294b820af'>Cape Analytics - Sr. Product Manager</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
