Speech Pathologist - Loma Linda University Careers Careers. Speech Pathologist - Loma Linda University Careers Careers. Angels of Care Pediatric Home Health Careers - Speech Language Pathologist. ChildServe Careers - Speech Language Pathologist - Ames. OnPointe at Home - Jobs: Speech Therapist (SLP) - Los Alamos .... Speech-Language Pathologist | Physical Rehabilitation Network. Speech Therapist SLP-PRN-Home Health. Aspire Medical Staffing Pediatric CFY/Speech Language Pathologist-Central and North Austin | SmartRecruiters. Speech Pathologist (Home Health) - Adventist Health Careers. Job Application for Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care. Harley Therapy Speech and Language Therapist | SmartRecruiters. AccentCare, Inc.® Careers - Speech Language Pathologist SLP San Antonio TX. Kingman Regional Medical Center Careers - Speech Language Pathologist -Therapy Services - Kingman, Arizona - Per Diem. Speech Language Pathologist - MD Anderson Cancer Center Careers. Speech and Language Pathologist - Shrub Oak International School - Career Page. Job Application for Speech Language Pathologist (SLP) Home Health at BAYADA Home Health Care. Job Application for Pediatric Speech Language Pathologist (SLP) at BAYADA Home Health Care. Job Application for Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care. Job Application for Speech Language Pathologist, SLP - Home Health at BAYADA Home Health Care. Job Application for Speech Therapist - Home Health at BAYADA Home Health Care. Job Application for Speech Language Pathologist (SLP) Full- Time at BAYADA Home Health Care. Job Application for Speech Language Pathologist (SLP), Senior Living at BAYADA Home Health Care. Job Application for Speech Language Pathologist - Home Health at BAYADA Home Health Care. Job Application for Speech Therapist - Home Health at BAYADA Home Health Care. Job Application for Speech Language Pathologist (SLP) - Home Health Care at BAYADA Home Health

--- a/speech-therapist.html
+++ b/speech-therapist.html
@@ -70,7 +70,7 @@ through?...</p>
 Rehab. Assists physician in determining patient's specific abilities and disabilities
 .</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/physicalrehabilitationnetwork/job/gu13ayspjy86zrhos894hqcmoc'>Speech-Language Pathologist | Physical Rehabilitation Network</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/physicalrehabilitationnetwork/job/gu13ayspjy86zrhos894hqcmoc'>Speech-Language Pathologist | Physical Rehabilitation Network</a></h5> 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -103,7 +103,7 @@ TIM) provides comprehensive rehabilitation therapy and management services?...</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mdanderson.referrals.selectminds.com/jobs/speech-language-pathologist-21235'>Speech Language Pathologist - MD Anderson Cancer Center Careers</a></h5> 
+<h5><a href='https://mdanderson.referrals.selectminds.com/jobs/speech-language-pathologist-21235'>Speech Language Pathologist - MD Anderson Cancer Center Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -237,7 +237,7 @@ re new. Yet extremely experienced. Isn't that what driven, curious, passionate?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
-<h5><a href='https://careers-qnsrecruiting.icims.com/jobs/5475/speech-language-pathologist---reading/job'>Speech Language Pathologist - Reading in Reading, Pennsylvania ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-qnsrecruiting.icims.com/jobs/5475/speech-language-pathologist---reading/job'>Speech Language Pathologist - Reading in Reading, Pennsylvania ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jun 30, 2019 ... Senior LIFE Reading is now hiring a Speech Language Pathologist - Reading in 
 Reading, Pennsylvania. Review all of the job details and apply today!</p>
@@ -259,11 +259,11 @@ Education Support. Full-Time 2019-2020 School Year. Apply for this job.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-10</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/UncommonSchools/743999691520305-speech-and-language-pathologist-immediate-start-'>Uncommon Schools Speech and Language Pathologist (Immediate Start) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/UncommonSchools/743999691520305-speech-and-language-pathologist-immediate-start-'>Uncommon Schools Speech and Language Pathologist (Immediate Start) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-10</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/accentcare/job/o2P09fwK'>AccentCare, Inc.? Careers - Speech Language Pathologist PRN DeSoto TX</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/accentcare/job/o2P09fwK'>AccentCare, Inc.? Careers - Speech Language Pathologist PRN DeSoto TX</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-10</p>
 <hr/>
@@ -447,7 +447,7 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
-<h5><a href='http://phoebeministries.applytojob.com/apply/ila1076BEi/Physical-Occupational-And-Speech-Therapist-Per-Diem-Quakertown'>Physical, Occupational, and Speech Therapist - Per Diem - Quakertown - Phoebe Ministries - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://phoebeministries.applytojob.com/apply/ila1076BEi/Physical-Occupational-And-Speech-Therapist-Per-Diem-Quakertown'>Physical, Occupational, and Speech Therapist - Per Diem - Quakertown - Phoebe Ministries - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
